--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-loading": "^2.0.3",
+    "react-router-dom": "^7.8.2",
     "three": "^0.179.1"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-router-dom": "^5.3.3",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
     "tailwindcss": "^4",
